# structure-gui

./: CMakeLists.txt  README.md
Builds/: README.md
Builds/release-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
Builds/release-x86_64/Source/: Makefile  Playground  cmake_install.cmake
Builds/release-x86_64/glew-build/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Builds/release-x86_64/glfw-3.2.1/: CMakeLists.txt  CMakeLists.txt.orig
Builds/release-x86_64/glfw-build/: Makefile  cmake_install.cmake
CMake/: extlibs.cmake  project.cmake
Documentation/html/: _c_s_v_file_writer_8h.html  _c_s_v_file_writer_8h_source.html  _camera_frames_8h.html  _camera_frames_8h_source.html  _capture_session_8h.html  _capture_session_8h_source.html  _capture_session_settings_8h.html  _capture_session_settings_8h.js  _capture_session_settings_8h_source.html  _capture_session_types_8h.html  _capture_session_types_8h.js  _capture_session_types_8h_source.html  _g_l_8h.html  _g_l_8h.js  _g_l_8h_source.html  _i_m_u_events_8h.html  _i_m_u_events_8h.js  _i_m_u_events_8h_source.html  _macros_8h.html  _macros_8h.js  _macros_8h_source.html  _math_types_8h.html  _math_types_8h.js  _math_types_8h_source.html  _math_types_8hpp.html  _math_types_8hpp.js  _math_types_8hpp_source.html  _o_c_c_file_writer_8h.html  _o_c_c_file_writer_8h_source.html  _utilities_8h.html  _utilities_8h.js  _utilities_8h_source.html  annotated.html  annotated_dup.js  class_s_t_1_1_performance_monitor-members.html  class_s_t_1_1_performance_monitor.html  class_s_t_1_1_performance_monitor.js  class_s_t_1_1_scope_time_for_performance_monitor-members.html  class_s_t_1_1_scope_time_for_performance_monitor.html  class_s_t_1_1_scope_time_for_performance_monitor.js  (+164 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  (+116 more)
Driver/: install-structure-core-linux.sh
Libraries/SampleCode/: Log.cpp  Log.h
Samples/Recorder/: CMakeLists.txt  Recorder.h
Samples/SimpleStreamer/: CMakeLists.txt  SimpleStreamer.cpp
Scripts/: build.sh
Source/: CMakeLists.txt  Gui.cpp  Gui.h  Playground.cpp  PlotVar.cpp  PlotVar.h
lib/SampleCode/: CMakeLists.txt  Gui.cpp  Gui.h  SampleCode.h
(+22 files in other folders)
